[gd_scene load_steps=10 format=2]

[ext_resource path="res://Art/GUI/arrow_right.png" type="Texture" id=1]
[ext_resource path="res://Art/GUI/arrow_left.png" type="Texture" id=2]
[ext_resource path="res://Art/Assets/book.png" type="Texture" id=3]
[ext_resource path="res://Art/GUI/x_button.png" type="Texture" id=4]
[ext_resource path="res://Art/Fonts/m5x7.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scenes/Book.gd" type="Script" id=6]
[ext_resource path="res://Art/Fonts/m5x7_bold.tres" type="DynamicFont" id=7]
[ext_resource path="res://Art/Fonts/m3x6.tres" type="DynamicFont" id=8]
[ext_resource path="res://new_theme.tres" type="Theme" id=9]

[node name="Book" type="Sprite"]
texture = ExtResource( 3 )
centered = false
script = ExtResource( 6 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Page_Left" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 14.0
margin_right = -120.0
margin_bottom = -22.0
mouse_filter = 2
theme = ExtResource( 9 )
custom_fonts/bold_font = ExtResource( 7 )
custom_fonts/normal_font = ExtResource( 8 )
custom_colors/default_color = Color( 0.0784314, 0.0627451, 0.0745098, 1 )
bbcode_enabled = true
bbcode_text = "Potions, from my home to yours by Granny Elmbug






Potion of animal intelligence 
Dearest Readers, Have you been havign trouble with a tiresome mare? Once your whelp has had a lick of this, they'll be walking on two legs and taking your inventory! 
 
I first began developing this recipe with some of my friends from the knitting club. If you're reading this now, surely you've heard what a wild cast of characters we have over there. So one of my dear friends there (who shall remain anonymous so as to protects one delicate family structure, what with her husband making leary eyes at that no good harlot next door, and with her two sons working not an ounce for what their dear old mom does for them) had some trouble with one of her three cats getting where it wasn't meant to. We did some digging and found an old recipe by some fuddy duddy, and updated it a bit to our liking. 
 
Lets go through some of the features. This potion should increase the beast's memory, alertness, and intelligence. 
 
We all know what it's like to have a pet that just won't quit! No matter how many times you tell your pet not to bark at the nice man next door who is just coming by for some spices in the middle of the night when your husband is out hunting, he still barks! This should help the pup learn a lesson and learn it well.  
 
If you're a longtime reader, you'll remember when I was Ms. Twistyspice, then Mrs. Lightroot, then Mrs. Sugarweather, then Mrs. Elmbug, and finally Granny Elmbug. This is all to say, I'm no spring chicken! And I need to keep abreast of all that goes on in my fair hamlet. The best way to do this nowadays is to have a pup that keeps a watchful eye. This potion will help with such matters. 
While Intelligence is hard to put plain, it is somewhat simplified by the creatures we're dealing with. While a dog will never reach human level intelligence, it might be able to, say, grab a stick suitable to whip my grandkids into shape. Again.  
 
Alright ladies, let's get potting! 
As always, start your potion in a neutral bath. 
One Dobberchu 
One Mandrake 
One Begonea 
Add them such that the final result is nearest the color of your cauldron. 
 
Best wishes, 
Granny Elmbug "
text = "Potions, from my home to yours by Granny Elmbug






Potion of animal intelligence 
Dearest Readers, Have you been havign trouble with a tiresome mare? Once your whelp has had a lick of this, they'll be walking on two legs and taking your inventory! 
 
I first began developing this recipe with some of my friends from the knitting club. If you're reading this now, surely you've heard what a wild cast of characters we have over there. So one of my dear friends there (who shall remain anonymous so as to protects one delicate family structure, what with her husband making leary eyes at that no good harlot next door, and with her two sons working not an ounce for what their dear old mom does for them) had some trouble with one of her three cats getting where it wasn't meant to. We did some digging and found an old recipe by some fuddy duddy, and updated it a bit to our liking. 
 
Lets go through some of the features. This potion should increase the beast's memory, alertness, and intelligence. 
 
We all know what it's like to have a pet that just won't quit! No matter how many times you tell your pet not to bark at the nice man next door who is just coming by for some spices in the middle of the night when your husband is out hunting, he still barks! This should help the pup learn a lesson and learn it well.  
 
If you're a longtime reader, you'll remember when I was Ms. Twistyspice, then Mrs. Lightroot, then Mrs. Sugarweather, then Mrs. Elmbug, and finally Granny Elmbug. This is all to say, I'm no spring chicken! And I need to keep abreast of all that goes on in my fair hamlet. The best way to do this nowadays is to have a pup that keeps a watchful eye. This potion will help with such matters. 
While Intelligence is hard to put plain, it is somewhat simplified by the creatures we're dealing with. While a dog will never reach human level intelligence, it might be able to, say, grab a stick suitable to whip my grandkids into shape. Again.  
 
Alright ladies, let's get potting! 
As always, start your potion in a neutral bath. 
One Dobberchu 
One Mandrake 
One Begonea 
Add them such that the final result is nearest the color of your cauldron. 
 
Best wishes, 
Granny Elmbug "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Page_Right" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = 14.0
margin_right = -7.0
margin_bottom = -22.0
mouse_filter = 2
theme = ExtResource( 9 )
custom_fonts/bold_font = ExtResource( 7 )
custom_fonts/normal_font = ExtResource( 8 )
custom_colors/default_color = Color( 0.0784314, 0.0627451, 0.0745098, 1 )
bbcode_enabled = true
bbcode_text = "Potions, from my home to yours by Granny Elmbug






Potion of animal intelligence 
Dearest Readers, Have you been havign trouble with a tiresome mare? Once your whelp has had a lick of this, they'll be walking on two legs and taking your inventory! 
 
I first began developing this recipe with some of my friends from the knitting club. If you're reading this now, surely you've heard what a wild cast of characters we have over there. So one of my dear friends there (who shall remain anonymous so as to protects one delicate family structure, what with her husband making leary eyes at that no good harlot next door, and with her two sons working not an ounce for what their dear old mom does for them) had some trouble with one of her three cats getting where it wasn't meant to. We did some digging and found an old recipe by some fuddy duddy, and updated it a bit to our liking. 
 
Lets go through some of the features. This potion should increase the beast's memory, alertness, and intelligence. 
 
We all know what it's like to have a pet that just won't quit! No matter how many times you tell your pet not to bark at the nice man next door who is just coming by for some spices in the middle of the night when your husband is out hunting, he still barks! This should help the pup learn a lesson and learn it well.  
 
If you're a longtime reader, you'll remember when I was Ms. Twistyspice, then Mrs. Lightroot, then Mrs. Sugarweather, then Mrs. Elmbug, and finally Granny Elmbug. This is all to say, I'm no spring chicken! And I need to keep abreast of all that goes on in my fair hamlet. The best way to do this nowadays is to have a pup that keeps a watchful eye. This potion will help with such matters. 
While Intelligence is hard to put plain, it is somewhat simplified by the creatures we're dealing with. While a dog will never reach human level intelligence, it might be able to, say, grab a stick suitable to whip my grandkids into shape. Again.  
 
Alright ladies, let's get potting! 
As always, start your potion in a neutral bath. 
One Dobberchu 
One Mandrake 
One Begonea 
Add them such that the final result is nearest the color of your cauldron. 
 
Best wishes, 
Granny Elmbug "
text = "Potions, from my home to yours by Granny Elmbug






Potion of animal intelligence 
Dearest Readers, Have you been havign trouble with a tiresome mare? Once your whelp has had a lick of this, they'll be walking on two legs and taking your inventory! 
 
I first began developing this recipe with some of my friends from the knitting club. If you're reading this now, surely you've heard what a wild cast of characters we have over there. So one of my dear friends there (who shall remain anonymous so as to protects one delicate family structure, what with her husband making leary eyes at that no good harlot next door, and with her two sons working not an ounce for what their dear old mom does for them) had some trouble with one of her three cats getting where it wasn't meant to. We did some digging and found an old recipe by some fuddy duddy, and updated it a bit to our liking. 
 
Lets go through some of the features. This potion should increase the beast's memory, alertness, and intelligence. 
 
We all know what it's like to have a pet that just won't quit! No matter how many times you tell your pet not to bark at the nice man next door who is just coming by for some spices in the middle of the night when your husband is out hunting, he still barks! This should help the pup learn a lesson and learn it well.  
 
If you're a longtime reader, you'll remember when I was Ms. Twistyspice, then Mrs. Lightroot, then Mrs. Sugarweather, then Mrs. Elmbug, and finally Granny Elmbug. This is all to say, I'm no spring chicken! And I need to keep abreast of all that goes on in my fair hamlet. The best way to do this nowadays is to have a pup that keeps a watchful eye. This potion will help with such matters. 
While Intelligence is hard to put plain, it is somewhat simplified by the creatures we're dealing with. While a dog will never reach human level intelligence, it might be able to, say, grab a stick suitable to whip my grandkids into shape. Again.  
 
Alright ladies, let's get potting! 
As always, start your potion in a neutral bath. 
One Dobberchu 
One Mandrake 
One Begonea 
Add them such that the final result is nearest the color of your cauldron. 
 
Best wishes, 
Granny Elmbug "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="x_button" type="TextureButton" parent="."]
margin_left = 215.0
margin_top = 2.0
margin_right = 222.0
margin_bottom = 10.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Left" type="TextureButton" parent="."]
margin_left = 5.0
margin_top = 105.0
margin_right = 17.0
margin_bottom = 116.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Right" type="TextureButton" parent="."]
margin_left = 205.0
margin_top = 105.0
margin_right = 217.0
margin_bottom = 116.0
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Page_Number_Left" type="Label" parent="."]
margin_left = 82.0
margin_top = 3.0
margin_right = 104.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.0784314, 0.0627451, 0.0745098, 1 )
text = "1"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Page_Number_Right" type="Label" parent="."]
margin_left = 120.0
margin_top = 3.0
margin_right = 143.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.0784314, 0.0627451, 0.0745098, 1 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="Button_Left" to="." method="_on_Button_Left_pressed"]
[connection signal="pressed" from="Button_Right" to="." method="_on_Button_Right_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
